# syncarp

./: .gitignore  Cargo.toml  README.md
examples/: client.rs  server.rs
examples/ocaml/: dune  rpc_client.ml  rpc_server.ml
src/: error.rs  lib.rs  protocol.rs  read_write.rs  rpc_client.rs  rpc_server.rs  sexp.rs  traits.rs
tests/: rpc_counter.rs  rpc_error.rs
