[package]
name = "syncarp"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

description = "Rust implementation of the OCaml Async_rpc protocol."
repository = "https://github.com/LaurentMazare/syncarp"
keywords = ["bin_prot", "rpc", "protocol", "network"]
categories = ["network-programming"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
async-trait = "0.1.50"
byteorder = "1.4.3"
binprot_derive = "0.1"
binprot = "0.1"
tokio = { version = "1.8.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[dev-dependencies]
anyhow = "1"
